--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>噼里啪ERP管理系统</title>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      您的浏览器版本太旧，请使用最新版本浏览器.
     </noscript>
     <div id="root"></div>
     <!--
